@@ -4,6 +4,8 @@ Summary of important user-visible changes for BioPerl
 {{$NEXT}}
     * Add minimum dependency on base.pm v2.18. Fixes bug in some cases when
       using SUPER::new() [#307].
+    * Fix test for BSML SAX by using lax parser XML::SAX::PurePerl since
+      the external DTD URL now 404s [#376].
 
 1.7.8     2021-02-02 23:02:18-06:00 America/Chicago
     * Bio::SeqIO::interpro has been moved to a separate repository to
